Correction du z-index de la modale

--- a/ressources/scss/modules/_modale.scss
+++ b/ressources/scss/modules/_modale.scss
@@ -5,6 +5,7 @@
   visibility: hidden;
   opacity: 0;
   position: fixed;
+  z-index: 1000;
   height: 100%;
   width: 100%;
   bottom: 0;
